<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.example.a.abndp2.MainActivity">


    <LinearLayout
        android:id="@+id/score_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="2"
        android:baselineAligned="false"
        android:orientation="horizontal">



        <LinearLayout
            android:id="@+id/team_a_score_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:orientation="vertical">


            <TextView
                android:id="@+id/team_a_label"
                style="@style/TeamLabelStyle"
                android:text="@string/team_A" />

            <TextView
                android:id="@+id/team_a_score"
                style="@style/ScoreTextStyle"
                android:text="@string/number_0" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/symbol"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/team_b_score_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/team_b_label"
                style="@style/TeamLabelStyle"
                android:text="@string/team_B" />

            <TextView
                android:id="@+id/team_b_score"
                style="@style/ScoreTextStyle"
                android:text="@string/number_0" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/darker_gray">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/scoring_buttons_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="4"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/touchdown_container"
            style="@style/ScoreTypeButtonContainerStyle">

            <Button
                android:id="@+id/team_a_touchdown"
                style="@style/ScoreButtonStyle"
                android:onClick="updateTeamScore"
                android:text="@string/number_6" />

            <TextView
                style="@style/ScoreTypeLabelStyle"
                android:text="@string/touch_down" />

            <Button
                android:id="@+id/team_b_touchdown"
                style="@style/ScoreButtonStyle"
                android:onClick="updateTeamScore"
                android:text="@string/number_6" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/field_goal_container"
            style="@style/ScoreTypeButtonContainerStyle">

            <Button
                android:id="@+id/team_a_field_goal"
                style="@style/ScoreButtonStyle"
                android:onClick="updateTeamScore"
                android:text="@string/number_3" />

            <TextView
                style="@style/ScoreTypeLabelStyle"
                android:text="@string/field_goal" />

            <Button
                android:id="@+id/team_b_field_goal"
                style="@style/ScoreButtonStyle"
                android:onClick="updateTeamScore"
                android:text="@string/number_3" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/extra_point_container"
            style="@style/ScoreTypeButtonContainerStyle">

            <Button
                android:id="@+id/team_a_extra_point_1"
                style="@style/ScoreButtonStyle"
                android:onClick="updateTeamScore"
                android:text="@string/number_1" />

            <Button
                android:id="@+id/team_a_extra_point_2"
                style="@style/ScoreButtonStyle"
                android:onClick="updateTeamScore"
                android:text="@string/number_2" />

            <TextView
                style="@style/ScoreTypeLabelStyle"
                android:text="@string/extra_point" />

            <Button
                android:id="@+id/team_b_extra_point_1"
                style="@style/ScoreButtonStyle"
                android:onClick="updateTeamScore"
                android:text="@string/number_1" />

            <Button
                android:id="@+id/team_b_extra_point_2"
                style="@style/ScoreButtonStyle"
                android:onClick="updateTeamScore"
                android:text="@string/number_2" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/safety_container"
            style="@style/ScoreTypeButtonContainerStyle">

            <Button
                android:id="@+id/team_a_safety"
                style="@style/ScoreButtonStyle"
                android:onClick="updateTeamScore"
                android:text="@string/number_2" />

            <TextView
                style="@style/ScoreTypeLabelStyle"
                android:text="@string/safety" />

            <Button
                android:id="@+id/team_b_safety"
                style="@style/ScoreButtonStyle"
                android:onClick="updateTeamScore"
                android:text="@string/number_2" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/darker_gray">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#333333"
            android:onClick="resetScores"
            android:text="@string/reset"
            android:textColor="#FFFFFF" />

    </LinearLayout>


</LinearLayout>

